# ecoroute-ht6

./: .dockerignore  .env.example  .gitattributes  .gitignore  ECOROUTE_TECHNICAL_SPEC.md  Makefile  README.md  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
apps/control-center/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/control-center/e2e/: ecoroute.spec.ts
apps/support-demo/: next.config.ts  package.json  tsconfig.tsbuildinfo
docs/: demo-runbook.md  kernel-lab-windows.md  kernel-lab.md  live-hosted-demo.md  live-regional-routing.md  measurement-methodology.md  spec-implementation-matrix.md
docs/architecture-decisions/: 0001-local-first-boundaries.md
infra/: Dockerfile.python  Dockerfile.web  compose.kernel-lab.yaml  compose.nvidia.yaml  compose.test.yaml  compose.yaml
infra/carbon-aware/: server.py
infra/fixtures/: prompts.yaml
infra/prometheus/: prometheus.yml
scripts/: benchmark  bootstrap  build_router_dataset.py  build_support_slm_dataset.py  demo-smoke  diagnose_router_deployment.py  eval_deployment.py  kernel-lab-demo  kernel-lab-down  kernel-lab-guest  kernel-lab-status  kernel-lab-up  kernel-lab-windows.ps1  kernel-lab-wsl  seed-demo  test-e2e  test-integration  validate-impact
services/gateway/: alembic.ini
services/gateway/alembic/: env.py
services/gateway/ecoroute/: __init__.py  config.py  main.py  seed.py
services/kernel-lab/: background.py  target.py
services/kernel-lab/systemd/: ecoroute-kernel-agent.service  ecoroute-kernel-background.service  ecoroute-kernel-target.service
services/node-agent/ecoroute_agent/: __init__.py  main.py  real_main.py
services/node-agent/tests/: test_agent.py
services/worker/ecoroute_worker/: __init__.py  main.py
services/worker/tests/: test_training.py
training/router/: environment.py
training/router/configs/: grpo.toml  sft.toml
training/support-slm/: environment.py
(+102 files in other folders)
